Further update on the report
Finished writing up to the design section.

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -95,3 +95,9 @@
     year = {1996},
     pages = {109--126}
 }
+
+@article{1371580,
+author = {Frederick Jelinek and Robert L. Mercer},
+title = {{Interpolated Estimation of Markov Source Parameters from Sparse Data}},
+year = {1980},
+masid = {1371580}
