Added Implementation section in the report

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -13,7 +13,7 @@
  acmid = {860460},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {automatic image annotation, empirical Bayes, image retrieval, probabilistic graphical models, variational methods},
+ keywords = {automatic image annotation, empirical Bayes, image retrieval, probabilistic graphical models, variational methods}
 } 
 
 @inproceedings{Das:2014:GBC:2556195.2556231,
@@ -49,7 +49,7 @@
  acmid = {2396798},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {comments summarization, master-slave document, topic model},
+ keywords = {comments summarization, master-slave document, topic model}
 } 
 
 @inproceedings{Sil:2011:SMC:2063576.2063906,
@@ -67,7 +67,7 @@
  acmid = {2063906},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {comments, enrichment, esa, structured classification},
+ keywords = {comments, enrichment, esa, structured classification}
 } 
 
 @inproceedings{Titov:2008:MOR:1367497.1367513,
@@ -85,7 +85,7 @@
  acmid = {1367513},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {clustering, opinion mining, topic models},
+ keywords = {clustering, opinion mining, topic models}
 } 
 
 @INPROCEEDINGS{Robertson96okapiat,
@@ -101,3 +101,18 @@ author = {Frederick Jelinek and Robert L. Mercer},
 title = {{Interpolated Estimation of Markov Source Parameters from Sparse Data}},
 year = {1980},
 masid = {1371580}
+}
+
+@misc{openNLP,
+    title = {Apache OpenNLP},
+    howpublished = {https://opennlp.apache.org/}
+}
+
+@book{McCandless:2010:LAS:1893016,
+ author = {McCandless, Michael and Hatcher, Erik and Gospodnetic, Otis},
+ title = {Lucene in Action, Second Edition: Covers Apache Lucene 3.0},
+ year = {2010},
+ isbn = {1933988177, 9781933988177},
+ publisher = {Manning Publications Co.},
+ address = {Greenwich, CT, USA}
+} 
