--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -115,4 +115,23 @@ masid = {1371580}
  isbn = {1933988177, 9781933988177},
  publisher = {Manning Publications Co.},
  address = {Greenwich, CT, USA}
-} 
+}
+
+@article{Miller:1995:WLD:219717.219748,
+ author = {Miller, George A.},
+ title = {WordNet: A Lexical Database for English},
+ journal = {Commun. ACM},
+ issue_date = {Nov. 1995},
+ volume = {38},
+ number = {11},
+ month = nov,
+ year = {1995},
+ issn = {0001-0782},
+ pages = {39--41},
+ numpages = {3},
+ url = {http://doi.acm.org/10.1145/219717.219748},
+ doi = {10.1145/219717.219748},
+ acmid = {219748},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}  
