Added the Conclusion section in the report

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -134,4 +134,22 @@ masid = {1371580}
  acmid = {219748},
  publisher = {ACM},
  address = {New York, NY, USA},
+}
+
+@inproceedings{Liu:2005:OOA:1060745.1060797,
+ author = {Liu, Bing and Hu, Minqing and Cheng, Junsheng},
+ title = {Opinion Observer: Analyzing and Comparing Opinions on the Web},
+ booktitle = {Proceedings of the 14th International Conference on World Wide Web},
+ series = {WWW '05},
+ year = {2005},
+ isbn = {1-59593-046-9},
+ location = {Chiba, Japan},
+ pages = {342--351},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1060745.1060797},
+ doi = {10.1145/1060745.1060797},
+ acmid = {1060797},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {information extraction, opinion analysis, sentiment analysis, visualization}
 }  
