--- a/Report/ir-report.tex
+++ b/Report/ir-report.tex
@@ -53,9 +53,11 @@ There have been a few works done on matching comments with news article segments
 
 Our algorithm for generating language models from an article has some parallel to topic modelling of documents. Several works have been done regarding topic modelling. MG-LDA \cite{Blei:2003:MAD:860435.860460, Titov:2008:MOR:1367497.1367513} is used to model local topics in a text. In a news article every segment may not be related to a comment. Also in this model, local topics scatter across the corpus which is not often the case in news articles. Hence, MG-LDA is not appropriate for our system. 
 
-Corr-LDA \cite{Titov:2008:MOR:1367497.1367513} is another topic model to understand correspondence. Since, Corr-LDA work with single vector model, a specific comment on a small segment of an article can show small correlation with the article using this model. To overcome this limitation Das et. al. \cite{Das:2014:GBC:2556195.2556231} developed a correspondence topic model (SCTM) that uses multiple topic vectors. Hence, for each comment-article segment pair there would be a number of topic vectors, which would enable comments to match with more correspondence segments of article. In \cite{Ma:2012:TRC:2396761.2396798} the authors focused on summarizing comments. This paper selects few most representative comments from comment cluster for an article. They used Master-Slave Topic model (MSTM) and Extended Master-Slave Topic model (EXTM) where News articles is treated as master and comment text as slave. Using this topic models they cluster the comments based on their topics and rank the most representative comments from each comment clusters.
+Corr-LDA \cite{Titov:2008:MOR:1367497.1367513} is another topic model to understand correspondence. Since, Corr-LDA work with single vector model, a specific comment on a small segment of an article can show small correlation with the article using this model. To overcome this limitation Das et. al. \cite{Das:2014:GBC:2556195.2556231} developed a correspondence topic model (SCTM) that uses multiple topic vectors. Hence, for each comment-article segment pair there would be a number of topic vectors, which would enable comments to match with more correspondence segments of article. 
 
-Since our criteria for filtering and categorizing comments under article segments significantly differ from the objectives of aforementioned works, there is considerable novelty in our solution. We are unaware of any previous work that uses query generation techniques to match comments against their underlying newspaper articles.       
+In \cite{Ma:2012:TRC:2396761.2396798} the authors focused on summarizing comments. This paper selects few most representative comments from comment cluster for an article. They used Master-Slave Topic model (MSTM) and Extended Master-Slave Topic model (EXTM) where News articles is treated as master and comment text as slave. Using this topic models they cluster the comments based on their topics and rank the most representative comments from each comment clusters. One significant limitation of their work is that they assumed that a comment is related to a single topic exclusively. 
+
+Since our criteria for filtering and categorizing comments under article segments significantly differ from the objectives of aforementioned works, there is considerable novelty in our solution. For example, none of the works we came upon use the structure of a news article into consideration to construct its models. We are unaware of any previous work that uses query generation techniques to match comments against their underlying newspaper articles.       
 
 \section{Problem Formulation}
 \label{pf}
@@ -211,7 +213,7 @@ Second, we observed in articles with a huge number of comments (e.g., in the sca
 \subsubsection{Get More Relevance Judgements}
 We collected over 730 Yahoo-News articles from \cite{Das:2014:GBC:2556195.2556231} and crawled over 850 articles from Alzajeera News. These articles are comment rich and there are minimum 20 comments per article. Our evaluation is, however, done over a minute sample having less than 40 articles. This is a place where we definitely need to improve.  
 
-We asked some friends and fellow researchers to read 5 to 10 random articles and provide relevance judgements for accompanying comments. Unfortunately, we got feedback for 1 or 2 articles per person -- sometimes we got none. We believe there was a lack of incentive in providing feedbacks as there was no accompanying reward. One good idea for collecting many relevance judgements can be to use something like Amazon Mechanical Turk with a reasonable remuneration per feedback. We will then need some funding to undertake that task though.    
+We asked some friends and fellow researchers to read 5 to 10 random articles and provide relevance judgements for accompanying comments. Unfortunately, we got feedback for 1 or 2 articles per person -- sometimes we got none. We believe there was a lack of incentive in providing feedbacks as there was no accompanying reward. One good idea for collecting many relevance judgements can be to use something like Amazon Mechanical Turk with a reasonable remuneration per feedback. Further, we only asked for binary relevance judgements from our participants to make the task easy for them. In a formal feedback generation experiment, we can ask for graded relevance. We will then need some funding to undertake this experiment though.    
 
 \subsubsection{Addressing Synonymy}
 One obvious thing to do to improve performance further is to apply a synonym analyser based on some lexical dictionary tool such as WordNet \cite{Miller:1995:WLD:219717.219748} during both query language model construction and comments ranking. We observed several cases where a minor difference in the terminology used such as `Britain' as opposed `British' resulting in unwanted expansion of the query language model and loss of efficiency in comment filtering.    
@@ -222,6 +224,13 @@ We initially spent considerable time trying to crawl news from New York Times bu
  
 \section{Conclusion}
 \label{con}
+In this project, we developed, to the best of our knowledge, a novel technique for automatically filtering and classifying relevant readers' comments for newspaper articles. Such a solution should be greatly useful for newspaper readers and editors alike in an era where unrestricted commenting leads to a rapid increase of both useful and unwanted comments.
+
+We treated an article title as a query and used that as a cue to develop structured query language models for the passages in that article where each term's probability of occurrence in a query generated from a model depends on values of several parameters such as its significance, number of co-occurrences with more important terms, and frequency. Then the task of selecting a relevant comment has been translated into a similarity matching problem between the comment's and article passage's language models. 
+
+Due to time constraints, we had to settle for a prototype implementation of the solution that cut few corners here and there that we believe affected our solution's performance. Particularly, we could not manage enough time to learn and implement a model similarity based comments ranking function, and did ranking and filtering of comments using Okapi BM25. Without a synonymy checker and an ideal retrieval function the performance of our implementation is still very encouraging.
+
+On a sample articles set annotated by human with binary relevance judgements, we achieved a MAP around 0.6 and P@5 over 0.5         even with all implementation shortcomings. This is a good enough result to be excited about and we are interested to take the project to the next step by enhancing our relevance judgements database, implementing a full fledged solution, and doing more evaluations. We just need some guidance and support along the way. 
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography} 
